--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.12",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@supabase/supabase-js": "^1.25.2",
+    "framer-motion": "^4.1.17",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
